[package]
name = "dust"
version = "0.1.0"
authors = ["Aurélien Hamy <aurelienhamy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log= "0.4"
simple_logger = "1.3.0"
tiny_http = "0.6.2"
threadpool = "1.7.1"